# python-projects

./: .gitignore  LICENSE  readme.md
azure_get_user_group_membership_and_last_signin/: graphsdk.py  multithreaded.py  pyproject.toml  readme.md  singlethreaded.py
boot.dev/: README.md  pyproject.toml
boot.dev/10.1_dictionaries/: main.py
boot.dev/10.8_dicts_iterating/: main.py
boot.dev/10.c2_dicts_challenge/: main.py
boot.dev/10.c3_dicts_challenge/: main.py
boot.dev/11.c1_sets_remove_duplicates/: main.py
boot.dev/11.c2_sets_find_vowels/: main.py
boot.dev/11.c3_sets_find_difs/: main.py
boot.dev/12.c2_exceptions_challenge/: main.py
boot.dev/13.2_challenges_min_num/: main.py
boot.dev/13.3_challenges_rm_nums/: main.py
boot.dev/13.4_challenges_factorial/: main.py
boot.dev/13.5_challenges_area_sum/: main.py
boot.dev/13.6_challenges_fizzbuzz/: main.py
boot.dev/7.c3_comparisons_challenge/: main.py
boot.dev/8.10_loops_sum_odd_numbers/: main.py
boot.dev/8.8_loops_fstrings/: main.py
boot.dev/8.9_loops_sum_game/: main.py
boot.dev/8.c2_loops_challenge/: main.py
boot.dev/book_bot/: main.py  (+1 more)
check_azure_rbac_permission_mismatch/: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt
clone_or_pull_repos/: clone_or_pull_repos.py  pyproject.toml  readme.md  requirements.txt
msgraph_client/: .gitignore  config.py  graph_client.py  graphsdk.py  main.py  mfa_service.py  pyproject.toml  readme.md  requirements.txt  singlethreaded.py  user_service.py
msgraph_client/src/: config.py  graph_client.py  main.py  mfa_service.py  user_service.py
(+111 files in other folders)
